# openhpsdr-zeus

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  IMPROVEMENTS.md  README.md  Zeus.slnx  run.sh
.beads/: interactions.jsonl  issues.jsonl
.claude/skills/convert-skins/: SKILL.md
.claude/skills/create-plugin/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: build-native-libs.yml  kb2uka-triage.yml  nightly.yml  release.yml  test-linux-arm64.yml
OpenhpsdrZeus/: OpenhpsdrZeus.csproj  Program.cs
OpenhpsdrZeus/Properties/: launchSettings.json
Zeus.Contracts/: AudioChainApplyRequest.cs  AudioChainOrderFrame.cs  BoardCapabilities.cs  CwEngineStatus.cs  Dtos.cs  MicPeakFrame.cs  MoxSource.cs  MsgType.cs
Zeus.Dsp/: IDspEngine.cs  SyntheticDspEngine.cs  ZeroBeatAlgorithm.cs  Zeus.Dsp.csproj
Zeus.Dsp/Wdsp/: NativeMethods.cs  WdspDspEngine.cs
Zeus.Plugins.Contracts/: AbiVersion.cs  IPluginContext.cs  IZeusPlugin.cs  PluginCapabilities.cs  PluginManifest.cs  PluginPermissionException.cs  Zeus.Plugins.Contracts.csproj
Zeus.Plugins.Contracts/Audio/: AudioBlockContext.cs
Zeus.Plugins.Contracts/Extensions/: IAudioPlugin.cs  IBackendPlugin.cs  IUiPlugin.cs
Zeus.Plugins.Contracts/Registry/: RegistryCatalog.cs
Zeus.Plugins.Host/: ManifestValidator.cs  PluginContext.cs  PluginEndpoints.cs  PluginLoader.cs  PluginManager.cs  PluginRoot.cs  PluginSettingsStore.cs  ServiceCollectionExtensions.cs  Zeus.Plugins.Host.csproj
Zeus.Plugins.Host/Audio/: AudioChain.cs  IVstBridgeNative.cs  VstBridgeNative.cs  VstHostAudioPlugin.cs
Zeus.Plugins.Host/Registry/: HttpRegistryClient.cs  IRegistryClient.cs  PluginInstaller.cs
Zeus.Protocol1/: IProtocol1Client.cs  PacketParser.cs  Protocol1Client.cs
Zeus.Protocol1/Discovery/: RadioDiscoveryService.cs
Zeus.Protocol2/: Protocol2Client.cs  RealtimeThreadPriority.cs
Zeus.Protocol2/Discovery/: RadioDiscoveryService.cs
Zeus.Server.Hosting/: AudioChainHealthService.cs  AudioPluginBridge.cs  BandPlanStore.cs  BoardCapabilitiesTable.cs  CapabilitiesService.cs  ChainOrderService.cs  ChainOrderStore.cs  CwEngine.cs  DisplaySettingsStore.cs  DspPipelineService.cs  ExternalPttService.cs  FloatSpscRing.cs  FrequencyCalibrationService.cs  IAuditionAudioSink.cs  IRxAudioSink.cs  LogService.cs  MiniAudioInput.cs  MiniAudioInterop.cs  MiniAudioOutput.cs  MorseEncoder.cs  NativeAudioSink.cs  NativeMicCapture.cs  NoOpAuditionAudioSink.cs  PaSettingsStore.cs  PsAutoAttenuateService.cs  QrzService.cs  RadioService.cs  RadioStateStore.cs  RotctldConfigStore.cs  RotctldService.cs  StreamingHub.cs  ThemeSettingsStore.cs  ToolbarSettingsStore.cs  TxAudioIngest.cs  TxMetersService.cs  TxService.cs  TxTuneDriver.cs  WebSocketAudioSink.cs  Zeus.Server.Hosting.csproj  ZeusEndpoints.cs  (+2 more)
Zeus.Server.Hosting/AudioChainHealth/: AudioChainRule.cs  BaseRules.cs  PerContextOverrides.cs  Readings.cs  RuleEvaluator.cs
Zeus.Server.Hosting/Tci/: TciSession.cs
Zeus.Server.Hosting/Wav/: WavFile.cs  WavRecorderService.cs  WavWriter.cs
docs/: BOARD_OVERRIDE_IMPLEMENTATION.md  IMPLEMENTATION-SUMMARY.md  RELEASE.md  tci-test-plan.md
docs/designs/: cw-zero-beat.md  nightly-builds.md
docs/lessons/: desktop-subprocess-management.md  dev-conventions.md  disconnection-troubleshooting.md  hl2-drive-model.md  native-lib-requirements.md  raspberry-pi-deployment.md  rf2k-extracted-to-plugin.md
docs/perf/: perf_pass_3_latency.md  perf_pass_3_server.md
docs/plugins/: audio-plugins.md  author-guide.md  capabilities.md  manifest-spec.md  plugin.schema.json  registry.md  registry.schema.json  visual-plugins.md
docs/prd/: panfall_behavior.md
docs/prds/: plugins-system-architecture.md
docs/proposals/: audio-chain-phase0.md  band-planning-prd.md  midi.md  plugin-system-v2.md  vst-host-phase2-wire.md  vst-host.md
docs/rca/: 2026-04-21-tx-stage-meters-alc-gr-sign-mic-pk.md  2026-04-23-disconnection-investigation.md  2026-05-29-ps-twotone-desktop-vs-web.md  anvelina-200d-detection.md
docs/references/: supported-settings.md
installers/: .gitignore  create-linux-desktop-appimage.sh  create-linux-package.sh  create-macos-app.sh  zeus-windows-launcher.cmd  zeus-windows.iss
native/: build.sh
native/miniaudio/: CMakeLists.txt  README.md  zeus_miniaudio.c  zeus_miniaudio.h
native/zeus-vst-bridge/: CMakeLists.txt  README.md
native/zeus-vst-bridge/include/: zvst.h
native/zeus-vst-bridge/src/: bridge.cpp
tests/Zeus.Contracts.Tests/: AudioChainOrderFrameTests.cs  MicPeakFrameTests.cs  Zeus.Contracts.Tests.csproj
tests/Zeus.Dsp.Tests/: ZeroBeatAlgorithmTests.cs
tests/Zeus.Plugins.Contracts.Tests/: AbiVersionTests.cs  PluginManifestTests.cs  PluginPermissionExceptionTests.cs  RegistryCatalogTests.cs  Zeus.Plugins.Contracts.Tests.csproj
tests/Zeus.Plugins.Host.Tests/: AudioChainProcessNoAllocTests.cs  AudioChainTests.cs  EndToEndPluginTests.cs  HttpRegistryClientTests.cs  ManifestValidatorTests.cs  PluginInstallerTests.cs  PluginLoaderTests.cs  PluginManagerTests.cs  PluginRootTests.cs  PluginSettingsStoreTests.cs  RoslynFixture.cs  VstBridgeNativeRealTests.cs  VstHostAudioPluginTests.cs  Zeus.Plugins.Host.Tests.csproj
tests/Zeus.Protocol1.Tests/: PacketParserTests.cs  Protocol1Client_HardwarePttEventTests.cs
tests/Zeus.Protocol2.Tests/: HermesP2DdcMappingTests.cs
tests/Zeus.Server.Tests/: AdifUtcTimezoneTests.cs  AudioPluginBridgeProcessLivePreviewTests.cs  ChainOrderServiceTests.cs  CwEngineTests.cs  LevelerMaxGainEndpointTests.cs  MicGainEndpointTests.cs  MorseEncoderTests.cs  MoxSourceOwnershipTests.cs  NativeAudioSinkRegistrationTests.cs  PsHwPeakResolutionTests.cs  PsPersistenceTests.cs  RadioServiceSetRadioLoTests.cs  RadioServiceZeroBeatTests.cs  RadioStateStoreTests.cs  StreamingHubMicPeakTests.cs  TestRadioServiceFactory.cs  ToolbarSettingsPersistenceTests.cs  TwoToneLatchTests.cs  TxActiveChangedTests.cs  TxAudioIngestTests.cs  TxMetersSwrTripTests.cs  TxTimeoutTests.cs  Zeus.Server.Tests.csproj
zeus-web/: index.html  package-lock.json  vite.config.ts
zeus-web/src/: App.tsx  main.tsx
(+151 files in other folders)
